styles/dboard.css
/* ... */
@keyframes iconflicker {
    0% {
        opacity: 1;
    }

    5% {
        opacity: 0.2;
    }

    10% {
        opacity: 1;
    }

    25% {
        opacity: 0.2;
    }

    30% {
        opacity: 1;
    }

    100% {
        opacity: 1;
    }
}


















@media only screen and (max-width: 1000px) {
    .left-fixed-nav {
        display: none;
        flex-direction: column;
        position: absolute;
        left: 0;
        width: auto;
        height: auto;
        text-align: center;
        z-index: 1;
    }

    .left-fixed-nav.show {
        display: flex;
        box-shadow: 5px 5px 20px -4px rgba(235, 235, 235, 0.75);
        -webkit-box-shadow: 5px 5px 20px -4px rgba(0, 0, 0, 0.55);
        -moz-box-shadow: 5px 5px 20px -4px rgba(0, 0, 0, 0.55);
    }

    .burger-menu {
        display: block;
        color: #fff;
        top: 1.5vh;
        z-index: 3;
    }

    .mandala-top {
        width: 20rem;

    }

    .nav-text {
        font-size: 1rem;
    }

    .logo {
        position: unset;
        bottom: 0;
    }

    #logo-bottom {
        height: auto;
        width: 18rem;
    }

    #team-name-here {
        margin-left: 0.8rem;
    }

    /* Enroll-section1 */

    .enroll{
        padding: 1.5vw 4.5vw;
        align-items: center;
    }

    .icons{
        margin-right: 1vw;
        display: flex;
        align-items: center;
    }

    .enroll-title {
        font-size: 1rem;
    }

    .Btn {
        width: 5rem;
        height: 2.5rem;
        margin-left: 2vw;
        margin-right: 2vw;
        padding-right: 1rem;
    }

    .sign {
        width: 40%;
        padding-left: 0.2rem;
    }

    .text {
        font-size: 0.8rem;
        opacity: 1;
        width: 65%;
        padding-right: 1rem;
    }



    .event {
        width: 90%;
        padding-left: 10vw;
    }

    .sanskrit-name {
        font-size: 1rem;
    }

    .normal-name {
        font-size: 0.9rem;
    }


    .input-title-name {
        font-size: 0.8rem;
    }

    .member {
        flex-direction: column;

    }

    .member-contact {
        margin: 0 0;
    }

    .form-inputbox {
        width: 80%;
    }

    .memname {
        width: 80%;
    }

    input {
        font-size: 0.8rem;
    }

    .input-title-contact {
        font-size: 0.8rem;
    }


    .animated-button {
        font-size: 0.8rem;
        background-color: #0A579B;
        color: #fff;
    }

    .qr-code {
        width: 15rem;
        height: auto;
        border-radius: 17px;
    }


    .warning-payment {
        width: 100%;
        text-align: justify;
    }

    .svg-icon-file {
        width: 2rem;
        /* Set the desired width */
        height: 2rem;
        /* Set the desired height */
    }


    .input-div {
        width: 5rem;
        height: 5rem;
    }


    .file-name{
        text-align: center;
    }



}

